# rust-2048

./: Cargo.toml
src/: game.rs  main.rs  ui.rs
