[package]

name = "game2048"
description = "2048 game in Rust"
repository = "https://github.com/andelf/rust-2048"
version = "0.0.5"
edition = "2021"
license = "MIT"
authors = [ "ShuYu Wang <andelf@gmail.com>" ]
keywords = [ "game", "2048", "SDL2" ]

[dependencies]
# was sdl2 = "^0.9" 
# tagged on Jan 12, 2014
sdl2 = { version = "0.35.2", features = ["bundled", "ttf", "gfx"] }
rand = "0.8.5"
num = "*"
